Fixed a bug where modified was not being set or updated when a contactsettings were created/patched.